# kimberlite

./: .clang-format  .editorconfig  .gitattributes  .gitignore  .gitmodules  Doxyfile.in  LICENCE  Package.swift  README.md  amalgamated.cpp  example  file_header  meson.build  meson_options.txt  open_docs  repl.map  run_tests  test.kbgeom  test_output.cpp  testtext
config/: kb_config.h  meson.build
cross/: wasm.cross
examples/: example.cpp  meson.build
include/kb/: alg.h  algorithm.h  alloc.h  api.h  array.h  assert.h  audio.h  cliargs.h  config.h  core.h  core.hpp  crt.h  enum.h  file.h  font.h  foundation.h  freelist.h  geometry.h  gizmo.h  graphics.h  handle.h  handle.hpp  hash.h  hash.hpp  input.h  kimberlite.h  log.h  log.hpp  magic.h  material.h  math.h  math.hpp  memory.h  noise.h  platform.h  rand.h  renderer.h  renderpass.h  resource.h  resource.hpp  (+21 more)
include/kb/foundation/: algo.h  alloc.h  array.h  build.h  core.h  crt.h  freelist.h  handle.h  hash.h  math.h  rand.h  resource.h  sampler.h  stream.h  table.h  thread.h  time.h
include/kb/inline/: handle.inl  log.inl
include/kbextra/: cliargs.h  font.h  geometry.h  gizmo.h  material.h  texture.h  vertex.h  yaml.h
libraries/: meson.build
libraries/catch/: meson.build
libraries/cgltf/: meson.build
libraries/fmt/: meson.build
libraries/meshoptimizer/: meson.build
libraries/soloud/: meson.build
libraries/stb/: meson.build
libraries/vkmemalloc/: meson.build
scripts/: blender_export.py  meson.build
source/: amalgamated.cpp  bin2c.cpp  fontc.cpp  geomc.cpp  meson.build  texturec.cpp
source/kb/: alloc.cpp  array.cpp  audio.cpp  crt.cpp  file.cpp  font.cpp  foundation.cpp  freelist.cpp  geometry.cpp  gizmo.cpp  graphics.cpp  hash.cpp  input.cpp  log.cpp  material.cpp  math.cpp  rand.cpp  renderer.cpp  sampler.cpp  stream.cpp  table.cpp  texture.cpp  thread.cpp  time.cpp  vertex.cpp
source/kb/foundation/: algo.cpp  alloc.cpp  array.cpp  build.cpp  crt.cpp  freelist.cpp  hash.cpp  math.cpp  rand.cpp  sampler.cpp  stream.cpp  table.cpp  thread.cpp  time.cpp
source/kbextra/: cliargs.cpp  font.cpp  geometry.cpp  gizmo.cpp  material.cpp  texture.cpp  variant.cpp  vertex.cpp  yaml.cpp
source/platform/: platform_audio_noop.cpp  platform_audio_soloud.cpp  platform_graphics_metal.mm  platform_graphics_noop.cpp  platform_graphics_vulkan.cpp  platform_graphics_vulkan.h  platform_input_noop.cpp  platform_input_sdl.cpp  platform_macos.mm  platform_noop.cpp  platform_rwops_noop.cpp  platform_rwops_sdl.cpp  platform_rwops_stdio.cpp  platform_surface_sdl.cpp  spirv_util.h
test/: meson.build  test_array.cpp  test_freelist.cpp  test_hash.cpp  test_table.cpp
tools/: bin2c.cpp  fontc.cpp  geomc.cpp  meson.build  platform_rwops_stdio.cpp  texturec.cpp
tools/bin2c/: main.cpp
tools/fontc/: main.cpp
tools/geomc/: main.cpp
tools/platform/: platform_rwops_stdio.cpp
tools/texturec/: main.cpp  texturec.cpp
